ip改回服务器ip

--- a/drone-api/resources/index.html
+++ b/drone-api/resources/index.html
@@ -541,7 +541,7 @@
                 
                 connectWebSocket() {
                     // 创建WebSocket连接
-                    this.socket = new WebSocket('ws://192.168.1.108:19999/api/ws');
+                    this.socket = new WebSocket('ws://localhost:19999/api/ws');
                     
                     // 更新连接状态为"连接中"
                     const statusEl = document.getElementById('connection-status');
